# GmailFileDownloader

./: .gitignore  Cargo.toml  LICENSE  README.md
async-imap/: Cargo.toml
async-imap/src/: client.rs  imap_stream.rs  lib.rs
async-imap/src/extensions/: compress.rs  mod.rs
async-imap/src/types/: fetch.rs  mod.rs  quota.rs
src/: main.rs
