[package]
name = "gmail_file_downloader"
version = "0.1.0"
edition = "2021"
authors = ["Serhii Stepanchuk"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
async-native-tls = "0.5.0" 
async-std = "1.13.0"
anyhow = "1.0.95"
futures = "0.3.31"

async-imap = { path = "./async-imap" }
mailparse = "0.15.0"
dialoguer = "0.11.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"