[package]
name = "async-imap"
version = "0.10.2"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
documentation = "https://docs.rs/async-imap/"
repository = "https://github.com/async-email/async-imap"
homepage = "https://github.com/async-email/async-imap"
description = "Async IMAP client for Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

keywords = ["email", "imap"]
categories = ["email", "network-programming"]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "async-email/async-imap" }
is-it-maintained-open-issues = { repository = "async-email/async-imap" }

[features]
default = ["runtime-async-std"]
compress = ["async-compression"]

runtime-async-std = ["async-std", "async-compression?/futures-io"]
runtime-tokio = ["tokio", "async-compression?/tokio"]

[dependencies]
async-channel = "2.0.0"
async-compression = { version = "0.4.15", default-features = false, features = ["deflate"], optional = true }
async-std = { version = "1.8.0", default-features = false, features = ["std", "unstable"], optional = true }
base64 = "0.21"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures = "0.3.15"
imap-proto = "0.16.4"
log = "0.4.8"
nom = "7.0"
once_cell = "1.8.0"
pin-project = "1"
pin-utils = "0.1.0-alpha.4"
self_cell = "1.0.1"
stop-token = "0.7"
thiserror = "1.0.9"
tokio = { version = "1", features = ["net", "sync", "time", "io-util"], optional = true }

[dev-dependencies]
async-std = { version = "1.8.0", features = ["std", "attributes"] }
pretty_assertions = "1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
